tests/test_data/CodeStructureSnippets/bad/sem_err_5.5.ifj21
require "ifj21"
global foo : function(integer,string) : string
function foo(x : integer, y : string) : string, integer
  local i : integer = 1
  local j : string = "papa"

  return i, j           
end

--main
function main()
    foo(1,"papa")

end
main()